[package]
name = "btc_podcast_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.11" }
scraper = { version = "0.16" }
reqwest_cookie_store = "0.5.0"
